Add links to Github repository

--- a/content/post/2019-04-16-modeling-short-time-series-with-prior-knowledge.Rmd
+++ b/content/post/2019-04-16-modeling-short-time-series-with-prior-knowledge.Rmd
@@ -16,4 +16,6 @@ I just published a longer case study, [Modeling Short Time Series with Prior Kno
 
 It is generally difficult to model time series when there is insuffient data to model a (suspected) long seasonality. We show how this difficulty can be overcome by learning a seasonality on a different, long related time series and transferring the posterior as a prior distribution to the model of the short time series. The result is a forecast that is believable and can be used for decisions in a business context. In contrast to traditional methods that are not able to incorporate the long seasonality, we observe a drastic increase in common evaluation metrics. Default models in the `forecast` and `prophet` R packages fail to produce good forecasts on this example.
 
+Find the [case study here](https://minimizeregret.com/short-time-series-prior-knowledge/), and the [data and code on Github](https://github.com/timradtke/short-time-series).
+
 ![](/post/final_forecast.png)
